--- a/proyectos/first-puebla.html
+++ b/proyectos/first-puebla.html
@@ -1,5 +1,5 @@
 <!--20/03/2023-->
-<!--Inspector de robots de la primera competencia de FIRST en el Tecnológico de Monterrey Campus Puebla.-->
+<!--Robot inspector of the first FIRST Robotics competition at the Tecnológico de Monterrey Campus Puebla.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -22,9 +22,9 @@
                     <h1 class="subtitle">¿De que trata?</h1>
                     <div class="description">
                         <img src="../images/first-puebla_profile.jpg">
-                        <p>Este es el primer año en el que no pertenezco a un equipo de FIRST ni como alumno ni como mentor pero para no dejar de apoyar a la competencia decidí inscribirme como "robot inspector" para el regional de puebla que se llevó a cabo del 16 al 20 de marzo en el Tecnológico de Monterrey Campus Puebla, mi labor fue la de verificar que los 33 robots de la competencia cumplieran con todas las características de seguridad, que sus fuentes de energía como la proveniente de la bateria y todos los circuitos electrónicos funcionaran correctamente y que los sistemas neumáticos no representaran un peligro para nadie dentro de los pits ni dentro de la cancha.</p><br>
-                        <p>En adición a la labor de inspección serví como voluntario para resolver problemáticas presentes en mecanismos de los robot, en específico rehice todo el sistema neumático de un equipo rookie y expliqué el término de límite de corriente al único equipo 100% de mujeres en México para que pudiera hacer funcionar su brazo correctamente ya que el torque excesivo de su motor ocasionaba que se les rompiera.</p><br>
-                        <p>Finalmente el último día de competencia me dediqué a desarmar la cancha y prepararla para enviarla a Torreón a su próxima competencia.</p>
+                        <p>This is the first year in which I don't belong to a FIRST team, either as a student or a mentor. However, in order to continue supporting the competition, I decided to register as a "robot inspector" for the Puebla regional event, which took place from March 16th to 20th at Tecnológico de Monterrey Campus Puebla. My role was to verify that the 33 robots in the competition complied with all safety requirements. I ensured that their power sources, such as the battery, and all electronic circuits were functioning correctly. Additionally, I checked that the pneumatic systems did not pose any danger to individuals in the pits or on the field. I took my responsibilities seriously to create a safe environment for all participants. By conducting thorough inspections, I contributed to the overall success of the event and helped ensure that the teams could compete in a fair and secure manner.</p><br>
+                        <p>In addition to my inspection duties, I volunteered to help solve issues with the mechanisms of the robots. Specifically, I redesigned the entire pneumatic system for a rookie team and explained the concept of current limit to the only all-female team in Mexico. This was to help them operate their arm correctly, as the excessive torque from their motor was causing it to break. By providing hands-on assistance and sharing my knowledge, I aimed to support these teams in overcoming technical challenges and improving the performance of their robots. It was rewarding to see them successfully address the issues they were facing and continue their competition journey with enhanced functionality and understanding.</p><br>
+                        <p>On the final day of the competition, I took on the task of dismantling the field and preparing it to be shipped to Torreón for its next competition.</p>
                         <img src="../images/first-puebla_profile.jpg">
                     </div>
                 </div>
@@ -32,7 +32,7 @@
         </div>
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
                         <img src="../images/first-puebla_1.jpg">
