--- a/proyectos/PLAN-foundation.html
+++ b/proyectos/PLAN-foundation.html
@@ -1,5 +1,5 @@
 <!--13/07/2022-->
-<!--Como parte de mi servicio social universitario, ingresé a "Fundación PLAN", una organización sin fines de lucro que busca ayudar a las comunidades a encontrar soluciones a sus problemáticas internas.-->
+<!--As part of my university social service, I joined "Fundación PLAN," a non-profit organization that aims to help communities find solutions to their internal issues.-->
 <!DOCTYPE html>
 <html lang="es">
     <head>
@@ -10,7 +10,7 @@
         <meta name="author" content="Paolo Reyes">
         <link rel="stylesheet" href="../css/style.css">
         <link rel="icon" href="../images/icon.ico">
-        <title>Fundación PLAN</title>
+        <title>PLAN Foundation</title>
         <script src="https://kit.fontawesome.com/9041eafba2.js" crossorigin="anonymous"></script>
     </head>
     <body>
@@ -19,37 +19,37 @@
         <div id="De_Que_Trata">
             <div class="container-subpage">
                 <div class="first-section-subpage">
-                    <h1 class="subtitle">¿De que trata?</h1>
+                    <h1 class="subtitle">What is it about?</h1>
                     <div class="small-description">
-                        <img src="../images/fundacion-plan_profile.jpg">
-                        <p>Como parte de mi servicio social formé parte de "Fundación PLAN", una organización sin fines de lucro que busca ayudar a las comunidades a encontrar soluciones a las problemáticas que se les presentan desde el enfoque más conveniente.</p><br>
-                        <p>Mi función dentro de la organización fue apoyar en la realización de las actividades; dentro de las actividades que realicé estuvieron la donación de ropa a personas de la calle, la reforestación de zonas verdes en Metepec, México, la realización de videos divertidos para niños en situaciones delicadas en hospitales y la escritura de cartas para personas de la tercera edad en asilos para celebrar fechas especiales como sus cumpleaños, día del abuelo, etc.</p>
-                        <img src="../images/fundacion-plan_profile.jpg">
+                        <img src="../images/PLAN-foundation_profile.jpg">
+                        <p>As part of my social service, I was involved with "Fundación PLAN," a non-profit organization that aims to help communities find solutions to their challenges using the most appropriate approach.</p><br>
+                        <p>My role within the organization was to support in carrying out various activities. Some of the activities I participated in included donating clothes to homeless individuals, participating in reforestation efforts in green areas in Metepec, Mexico, creating fun videos for children in delicate situations in hospitals, and writing letters to elderly individuals in nursing homes to celebrate special occasions such as their birthdays or Grandparents Day.</p>
+                        <img src="../images/PLAN-foundation_profile.jpg">
                     </div>
                 </div>
             </div>
         </div>  
         <div id="ejemplos">
             <div class="container">
-                <h1 class="subtitle">Evidencias</h1>
+                <h1 class="subtitle">Evidence</h1>
                 <div class="work-list">
                     <div class="work">
-                        <img src="../images/fundacion-plan_1.jpg">
+                        <img src="../images/PLAN-foundation_1.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/fundacion-plan_2.jpg">
+                        <img src="../images/PLAN-foundation_2.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/fundacion-plan_3.jpg">
+                        <img src="../images/PLAN-foundation_3.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/fundacion-plan_4.jpg">
+                        <img src="../images/PLAN-foundation_4.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/fundacion-plan_5.jpg">
+                        <img src="../images/PLAN-foundation_5.jpg">
                     </div>
                     <div class="work">
-                        <img src="../images/fundacion-plan_6.jpg">
+                        <img src="../images/PLAN-foundation_6.jpg">
                     </div>
                 </div>    
             </div>
